# GenAI-Legal-Assistant

./: .gitignore  ARCHITECTURE.md  Dockerfile  FEATURES_DOCUMENTATION.md  PROJECT_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  TECHNICAL_DEEP_DIVE.md  apply_elite.py  dataset_pipeline.py  docker-compose.yml  improve_empty_states.py  main.py  pyproject.toml  refactor.py  refactor_home.py  requirements.txt  setup.py  test_nda.txt  test_script.py  user_test_text.txt  verify_pdf.py  verify_retrieval.py
.streamlit/: config.toml
Research_Publication_Workspace/Code_and_Experiments/: exp_01_baseline_vs_transformer.py  exp_03_parser_ablation.py  exp_05_dataset_size.py  exp_06_retrieval_vs_keyword.py  exp_07_embedding_ablation.py  exp_10_dimension_analysis.py  exp_10_topk_sensitivity.py  get_mlflow_metrics.py
Research_Publication_Workspace/Data_and_Results/: dimension_analysis.csv  evaluation_results.csv  mrr_results.csv  ndcg_results.csv  retrieval_results.csv
Research_Publication_Workspace/Learning_and_Docs/: 01_Data_Layer_Pipeline.md  API.md  module_1_2_legal_bert_guide.py  what_is_bm25.md  why_embeddings_work.md
Research_Publication_Workspace/Publication_Drafts/: abstract.md  future_work.md  generate_paper.py  methodology.md  paper_template.md  results.md
Research_Publication_Workspace/Visualizations/: generate_charts.py
agentic_ai/: workflow.py
analytics/: dashboard.py
app/: __init__.py  config.py  logging_config.py  worker.py
app/auth/: audit_security.py  deps.py  jwt.py  permissions.py  rbac.py  refresh_tokens.py  router.py  security.py  tenant_guard.py
app/db/: database.py  models.py  schemas.py
app/evaluation/: __init__.py
app/explainability/: evidence_trace.py  risk_explainer.py
app/models/: __init__.py  baseline_classifier.py  legal_bert_classifier.py
app/parsers/: __init__.py  clause_node.py  document_parser.py  hierarchy_builder.py  normalizer.py  patterns.py  spatial_parser.py
app/playbooks/: __init__.py  comparator.py  models.py  retriever.py  risk_rules.py
app/rag/: __init__.py  context_builder.py  evidence_selector.py  generator.py  grounding.py  prompt_builder.py  schemas.py
app/retrieval/: __init__.py  embedder.py  faiss_index.py  metrics.py  reranker.py  (+1 more)
backend/: .env.example  auth.py  database.py  main.py  models.py
benchmarks/: run_experiments.py
data/: README.md  cuad_sample.json
data_engineering/: etl_pipeline.py
docs/: module_02_fastapi_guide.py  module_03_database_guide.py  module_04_nlp_guide.py
evaluation/: benchmark.py
explainable_ai/: shap_explainer.py
frontend/: api_client.py  app.py  package-lock.json  package.json  tailwind.config.ts
knowledge_graph/: graph_builder.py
learning_notes/: Master_Build_Guide.md
mlops/: mlflow_tracker.py
nlp_layer/: parser.py
notebooks/: README.md
retrieval/: vector_search.py
risk_intelligence/: risk_model.py
scratch/: gather_research.py  verify_playbook.py
tests/: __init__.py  test_api.py  test_database.py  test_legal_bert.py  test_nlp_baseline.py  test_parser.py  test_structure.py
training/: dataset.py  download_cuad.py  fine_tune.py  metrics.py  train_legal_bert.py
(+149 files in other folders)
