[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "legalsight-ai"
version = "0.1.0"
description = "End-to-End Legal Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Backend Core
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.36",
    "python-multipart==0.0.6",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "slowapi>=0.1.9",
    "aiofiles>=23.2.1",
    "psycopg2-binary>=2.9.0",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
    "email-validator>=2.0.0",

    # Document Processing
    "PyPDF2==3.0.1",
    "python-docx==1.1.0",

    # Background tasks & Storage
    "boto3>=1.28.0",
    "redis>=5.0.0",
    "celery>=5.3.0",

    # AI / LLM / ML
    "google-generativeai==0.3.2",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0",
    "transformers>=4.30",
    "datasets",
    "faiss-cpu",
    "sentence-transformers",

    # Frontend
    "streamlit>=1.31.0",
    "pandas==2.2.3",
    "requests==2.31.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["app*", "backend*", "frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
